--- a/index.html
+++ b/index.html
@@ -3,78 +3,65 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>SGM Public School - Study Material</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SGM Public School</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
       margin: 0;
       padding: 0;
-      background: #f4f4f9;
     }
     header {
-      background: #4a90e2;
+      background-color: #0077b6;
       color: white;
-      padding: 1rem 0;
+      padding: 1rem 2rem;
       text-align: center;
     }
     nav {
-      background: #357ABD;
+      background: #023e8a;
       display: flex;
       justify-content: center;
       padding: 0.5rem 0;
     }
     nav a {
       color: white;
-      margin: 0 15px;
+      margin: 0 1rem;
       text-decoration: none;
       font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
     }
     main {
       padding: 2rem;
       text-align: center;
     }
-    h1 {
-      color: #333;
-    }
-    p {
-      font-size: 1.1rem;
-      color: #555;
-    }
     footer {
-      background: #222;
+      background: #0077b6;
       color: white;
       text-align: center;
-      padding: 1rem 0;
-      margin-top: 2rem;
+      padding: 1rem;
+      position: fixed;
+      width: 100%;
+      bottom: 0;
     }
   </style>
 </head>
 <body>
-
   <header>
     <h1>SGM Public School</h1>
-    <p>Free Study Material & Motivation for Students</p>
+    <p>Welcome to our official study material website</p>
   </header>
-
   <nav>
-    <a href="index.html">Home</a>
-    <a href="quotes.html">Quotes</a>
-    <a href="classes.html">Study Material</a>
-    <a href="gallery.html">Gallery</a>
+    <a href="#">Home</a>
+    <a href="#">Quotes</a>
+    <a href="#">Study Material</a>
+    <a href="#">Gallery</a>
   </nav>
-
   <main>
-    <h2>Welcome to the Official Study Portal</h2>
-    <p>Find study material from Class 1 to 8, SSC GD resources, and daily motivation to keep you inspired.</p>
+    <h2>Welcome Students!</h2>
+    <p>Find motivational quotes and study material from Class 1 to 8 here.</p>
   </main>
-
   <footer>
-    &copy; 2025 SGM Public School | Designed with dedication by Rohit Kumar
+    &copy; 2025 SGM Public School. All rights reserved.
   </footer>
-
 </body>
 </html>
